--- a/css/common.css
+++ b/css/common.css
@@ -4,11 +4,139 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+}
+/* TASK - 1 */
+#categories {
+  list-style: none;
+  border-radius: 8px;
+  padding: 16px;
+  width: 392px;
+  height: 264px;
+  background-color: #f6f6fe;
+}
+
+/* TASK - 2 */
+.gallery {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 84px 140px;
+  margin: 0;
+  gap: 48px 24px;
+}
+
+.gallery-item {
+  flex-basis: calc((100% - 48px) / 3);
+  max-width: 360px;
+  height: 300px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* TASK - 3 */
+#name-input {
+  width: 360px;
+  height: 40px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+}
+
+/* TASK - 5 */
+.widget {
+  display: inline-block;
+  padding: 100px 88px;
+}
+
+.widget p {
+  color: #2e2f42;
+
+  font-family: Montserrat, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+  margin: 16px 0;
+}
+
+.change-color {
+  width: 150px;
+  display: block;
+  border: none;
+  border-radius: 8px;
+  background: #4e75ff;
+  padding: 8px 16px;
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+}
+
+/* TASK - 6 */
+
+#controls {
+  display: flex;
+  gap: 16px;
+  padding: 32px;
+  background-color: #f6f6fe;
+  border-radius: 8px;
+  margin-bottom: 16px;
+}
+
+#boxes {
+  display: flex;
+  gap: 16px;
+  padding: 32px;
+  background-color: #f6f6fe;
+  border-radius: 8px;
+  margin-bottom: 16px;
+}
+
+input[type="number"] {
+  border: 1px solid #808080;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 150px;
+  height: 40px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+#controls button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 120px;
+  height: 40px;
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+button[data-create] {
+  background-color: #4e75ff;
+}
+
+button[data-destroy] {
+  background-color: #ff4e4e;
 }
